--- a/edit.css
+++ b/edit.css
@@ -1,5 +1,5 @@
 .controller.ds4.white {
-    background: url(assets/base.svg);
+    background: url(assets/base.svgz);
 }
 .ds4.white .face {
     filter: grayscale() brightness(2.8);
